[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/default_font_menu.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/menus/scripts/main_menu.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HBC" type="HBoxContainer" parent="."]
margin_right = 640.0
margin_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="HBC"]
margin_left = 228.0
margin_right = 411.0
margin_bottom = 720.0
custom_constants/separation = 16
alignment = 1

[node name="Continue" type="Button" parent="HBC/VBC"]
margin_top = 52.0
margin_right = 183.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 1 )
text = "Continue"

[node name="LoadGame" type="Button" parent="HBC/VBC"]
margin_top = 112.0
margin_right = 183.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 1 )
text = "Load Game"

[node name="NewGame" type="Button" parent="HBC/VBC"]
margin_top = 172.0
margin_right = 183.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 1 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuickGame" type="Button" parent="HBC/VBC"]
margin_top = 232.0
margin_right = 183.0
margin_bottom = 276.0
custom_fonts/font = ExtResource( 1 )
text = "Quick Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="HSeparator" parent="HBC/VBC"]
margin_top = 292.0
margin_right = 183.0
margin_bottom = 548.0
custom_constants/separation = 256
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="HBC/VBC"]
margin_top = 564.0
margin_right = 183.0
margin_bottom = 608.0
custom_fonts/font = ExtResource( 1 )
text = "Credits"

[node name="Quit" type="Button" parent="HBC/VBC"]
margin_top = 624.0
margin_right = 183.0
margin_bottom = 668.0
custom_fonts/font = ExtResource( 1 )
text = "Quit"

[connection signal="pressed" from="HBC/VBC/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="HBC/VBC/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="HBC/VBC/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="HBC/VBC/QuickGame" to="." method="_on_QuickGame_pressed"]
[connection signal="pressed" from="HBC/VBC/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="HBC/VBC/Quit" to="." method="_on_Quit_pressed"]
